--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "<xxx.onmicrosoft.com>",
-    "TenantId": "<xxx>",
-    "ClientId": "<xxxx>",
+    "Domain": "<drcybercity.onmicrosoft.com>",
+    "TenantId": "93433aaf-d242-47f3-827c-1ad3dd5c978a",
+    "ClientId": "72699eac-9acd-414c-963a-ec711ab24aa4",
     "CallbackPath": "/signin-oidc"
   },
   "Logging": {
